--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.0",
+        "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "mongoose": "^5.9.27",
